Added installer name and fix vendor linguist.
Signed-off-by: Joshua Parker <joshua@joshuaparker.dev>

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "oomphinc/composer-installers-extender": "^2.0"
   },
   "extra": {
+    "installer-name": "AdminBar",
     "installer-types": ["devflow-plugin"]
   },
   "minimum-stability": "stable",
